--- a/frontend/src/css/search.css
+++ b/frontend/src/css/search.css
@@ -393,7 +393,7 @@
   }
 
   .search-icon {
-    font-size: 1.25rem;
+    font-size: 1rem;
     line-height: 1;
     color: #999;
   }
